--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ethers": "^4.0.27"
+    "ethers": "^4.0.27",
+    "truffle-hdwallet-provider": "^1.0.5"
   }
 }
